CDH-70865: SENTRY-2252: Normalize the Sentry store API's to handle both user/role privileges (Kalyan Kumar kalvagadda, reviewed-by Na Li) SENTRY-2245: Remove privileges that do not associate with a role or a user (Na Li, reviewed by Sergio Pena, Kalyan Kumar Kalvagadda)
==C5_FEATURE_FGP==

Change-Id: Id0803c10b1f5d260177df2e6a3c839ecacacd02a
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/35160
Tested-by: Jenkins User <jenkins@cloudera.com>
Reviewed-by: Sergio Pena <sergio.pena@cloudera.com>